--- a/check_services.yml
+++ b/check_services.yml
@@ -7,6 +7,10 @@
   - name: display the state of the wanted services
     debug:
       - "|
-        name: {{ item.name }}
-        state: {{ services[item.name].state }}
-        status: {{ services[item.name].status }}"
+        name: {{ item }}
+        state: {{ services[item].state }}
+        status: {{ services[item].status }}"
+    loop:
+      - sshd
+      - httpd
+      - nginx
